[gd_scene load_steps=14 format=4 uid="uid://o3jyq867wyar"]

[ext_resource type="Texture2D" uid="uid://bg55f111ai3jv" path="res://UI/Game_over/tiles/LKVe2a.jpg" id="1_leq7i"]
[ext_resource type="Script" uid="uid://fikeow01tujp" path="res://UI/Game_over/game_over.gd" id="2_cl405"]
[ext_resource type="FontFile" uid="uid://btis15kxc2lhr" path="res://UI/fonts/8-bit Arcade In.ttf" id="2_nkuw6"]
[ext_resource type="FontFile" uid="uid://d24lcfiwk4mfc" path="res://UI/fonts/Minecraft.ttf" id="3_unhg1"]
[ext_resource type="Script" uid="uid://dnw5qywim3lo5" path="res://UI/Game_over/score.gd" id="6_1telg"]
[ext_resource type="Texture2D" uid="uid://c526x4kwrrtnq" path="res://main/assets/button_esqueleto-Sheet.png" id="6_ay67i"]
[ext_resource type="Script" uid="uid://xmyy1ukfebhj" path="res://UI/Game_over/texture_button.gd" id="6_csxi0"]
[ext_resource type="Script" uid="uid://dy8mf8nrysfue" path="res://UI/Game_over/texture_button_2.gd" id="8_ay67i"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_nkuw6"]
texture = ExtResource("1_leq7i")
margins = Vector2i(28, 0)
texture_region_size = Vector2i(32, 32)
use_texture_padding = false
13:2/0 = 0
16:7/0 = 0
17:7/0 = 0
31:7/0 = 0
13:8/0 = 0
31:4/0 = 0
32:4/0 = 0
20:2/0 = 0
5:30/0 = 0
5:29/0 = 0
6:29/0 = 0
6:30/0 = 0
21:1/0 = 0
33:10/0 = 0
34:10/0 = 0
35:10/0 = 0
32:10/0 = 0
32:11/0 = 0
32:12/0 = 0
32:13/0 = 0
33:13/0 = 0
34:13/0 = 0
35:13/0 = 0
35:12/0 = 0
35:11/0 = 0
34:11/0 = 0
33:11/0 = 0
33:12/0 = 0
34:12/0 = 0
29:11/0 = 0

[sub_resource type="TileSet" id="TileSet_unhg1"]
sources/1 = SubResource("TileSetAtlasSource_nkuw6")

[sub_resource type="AtlasTexture" id="AtlasTexture_bgp0o"]
atlas = ExtResource("6_ay67i")
region = Rect2(0, 0, 100, 0)

[sub_resource type="AtlasTexture" id="AtlasTexture_8c4tm"]
atlas = ExtResource("6_ay67i")
region = Rect2(100, 1, 99, 0)

[sub_resource type="AtlasTexture" id="AtlasTexture_ay67i"]
atlas = ExtResource("6_ay67i")
region = Rect2(0, 0, 101, 0)

[node name="TileMapLayer" type="TileMapLayer"]
position = Vector2(-26, 0)
tile_map_data = PackedByteArray("AAAEAAsAAQAgAAoAAAAEAA0AAQAgAAsAAAAEAA8AAQAgAAsAAAAEABEAAQAgAAsAAAAEABMAAQAgAAsAAAAEABUAAQAgAAsAAAAEABcAAQAgAAsAAAAEABkAAQAgAAsAAAAEABsAAQAgAAwAAAAEAB0AAQAgAA0AAAAGAB0AAQAhAA0AAAAIAB0AAQAhAA0AAAAKAB0AAQAhAA0AAAAMAB0AAQAhAA0AAAAOAB0AAQAhAA0AAAAQAB0AAQAhAA0AAAASAB0AAQAhAA0AAAAUAB0AAQAhAA0AAAAWAB0AAQAhAA0AAAAYAB0AAQAhAA0AAAAaAB0AAQAhAA0AAAAcAB0AAQAhAA0AAAAeAB0AAQAjAA0AAAAeABsAAQAjAAwAAAAeABkAAQAjAAwAAAAeABcAAQAjAAwAAAAeABUAAQAjAAwAAAAeABMAAQAjAAwAAAAeABEAAQAjAAwAAAAeAA8AAQAjAAwAAAAeAA0AAQAjAAwAAAAeAAwAAQAjAAsAAAAeAAsAAQAjAAoAAAAcAAsAAQAiAAoAAAAaAAsAAQAiAAoAAAAYAAsAAQAiAAoAAAAWAAsAAQAiAAoAAAAUAAsAAQAiAAoAAAASAAsAAQAiAAoAAAAQAAsAAQAiAAoAAAAOAAsAAQAiAAoAAAAMAAsAAQAiAAoAAAAKAAsAAQAiAAoAAAAIAAsAAQAiAAoAAAAGAAsAAQAhAAoAAAAGAA0AAQAdAAsAAAAIAA0AAQAdAAsAAAAJAA0AAQAdAAsAAAAKAA0AAQAdAAsAAAALAA0AAQAdAAsAAAAMAA0AAQAdAAsAAAANAA0AAQAdAAsAAAAOAA0AAQAdAAsAAAAPAA0AAQAdAAsAAAAQAA0AAQAdAAsAAAARAA0AAQAdAAsAAAASAA0AAQAdAAsAAAATAA0AAQAdAAsAAAAUAA0AAQAdAAsAAAAVAA0AAQAdAAsAAAAWAA0AAQAdAAsAAAAXAA0AAQAdAAsAAAAYAA0AAQAdAAsAAAAZAA0AAQAdAAsAAAAaAA0AAQAdAAsAAAAbAA0AAQAdAAsAAAAcAA0AAQAdAAsAAAAcAA4AAQAdAAsAAAAcAA8AAQAdAAsAAAAbAA8AAQAdAAsAAAAbABAAAQAdAAsAAAAaABAAAQAdAAsAAAAZABAAAQAdAAsAAAAYABAAAQAdAAsAAAAXABAAAQAdAAsAAAAWAA8AAQAdAAsAAAAVAA8AAQAdAAsAAAAUAA8AAQAdAAsAAAATAA8AAQAdAAsAAAASAA8AAQAdAAsAAAARAA8AAQAdAAsAAAAQAA8AAQAdAAsAAAAPAA8AAQAdAAsAAAAOAA8AAQAdAAsAAAANAA8AAQAdAAsAAAAMAA8AAQAdAAsAAAALAA8AAQAdAAsAAAAKAA8AAQAdAAsAAAAKAA4AAQAdAAsAAAAJAA4AAQAdAAsAAAAIAA4AAQAdAAsAAAAHAA4AAQAdAAsAAAAGAA4AAQAdAAsAAAALAA4AAQAdAAsAAAAMAA4AAQAdAAsAAAANAA4AAQAdAAsAAAAOAA4AAQAdAAsAAAAPAA4AAQAdAAsAAAAQAA4AAQAdAAsAAAARAA4AAQAdAAsAAAASAA4AAQAdAAsAAAATAA4AAQAdAAsAAAAUAA4AAQAdAAsAAAAVAA4AAQAdAAsAAAAWAA4AAQAdAAsAAAAXAA4AAQAdAAsAAAAYAA4AAQAdAAsAAAAZAA4AAQAdAAsAAAAZAA8AAQAdAAsAAAAaAA8AAQAdAAsAAAAbABEAAQAdAAsAAAAcABEAAQAdAAsAAAAaABEAAQAdAAsAAAAZABEAAQAdAAsAAAAYABEAAQAdAAsAAAAXABEAAQAdAAsAAAAWABEAAQAdAAsAAAAWABAAAQAdAAsAAAAVABAAAQAdAAsAAAAUABAAAQAdAAsAAAATABAAAQAdAAsAAAASABAAAQAdAAsAAAARABAAAQAdAAsAAAAQABAAAQAdAAsAAAAPABAAAQAdAAsAAAAOABAAAQAdAAsAAAANABAAAQAdAAsAAAAMABAAAQAdAAsAAAALABAAAQAdAAsAAAAJAA8AAQAdAAsAAAAIAA8AAQAdAAsAAAAHAA8AAQAdAAsAAAAGAA8AAQAdAAsAAAAGABAAAQAdAAsAAAAGABEAAQAdAAsAAAAGABIAAQAdAAsAAAAHABMAAQAdAAsAAAAHABQAAQAdAAsAAAAIABQAAQAdAAsAAAAIABMAAQAdAAsAAAAJABMAAQAdAAsAAAAKABMAAQAdAAsAAAALABIAAQAdAAsAAAAMABIAAQAdAAsAAAAMABEAAQAdAAsAAAALABEAAQAdAAsAAAAKABEAAQAdAAsAAAAJABEAAQAdAAsAAAAIABEAAQAdAAsAAAAIABAAAQAdAAsAAAAHABAAAQAdAAsAAAAHABEAAQAdAAsAAAAIABIAAQAdAAsAAAAOABIAAQAdAAsAAAAPABIAAQAdAAsAAAAQABIAAQAdAAsAAAARABIAAQAdAAsAAAASABIAAQAdAAsAAAATABIAAQAdAAsAAAAUABIAAQAdAAsAAAAVABIAAQAdAAsAAAAWABIAAQAdAAsAAAAXABIAAQAdAAsAAAAXABMAAQAdAAsAAAAYABMAAQAdAAsAAAAZABMAAQAdAAsAAAAaABMAAQAdAAsAAAAaABIAAQAdAAsAAAAbABIAAQAdAAsAAAAbABMAAQAdAAsAAAAcABMAAQAdAAsAAAAcABQAAQAdAAsAAAAbABQAAQAdAAsAAAAaABQAAQAdAAsAAAAZABQAAQAdAAsAAAAYABQAAQAdAAsAAAAXABQAAQAdAAsAAAAWABQAAQAdAAsAAAAVABMAAQAdAAsAAAAUABMAAQAdAAsAAAATABMAAQAdAAsAAAASABMAAQAdAAsAAAARABMAAQAdAAsAAAAQABMAAQAdAAsAAAAPABMAAQAdAAsAAAAOABMAAQAdAAsAAAANABMAAQAdAAsAAAAMABMAAQAdAAsAAAALABMAAQAdAAsAAAAGABQAAQAdAAsAAAAGABUAAQAdAAsAAAAHABUAAQAdAAsAAAAIABUAAQAdAAsAAAAJABUAAQAdAAsAAAAJABYAAQAdAAsAAAAKABYAAQAdAAsAAAALABYAAQAdAAsAAAAMABYAAQAdAAsAAAANABUAAQAdAAsAAAAOABUAAQAdAAsAAAAPABYAAQAdAAsAAAAQABYAAQAdAAsAAAARABYAAQAdAAsAAAASABYAAQAdAAsAAAATABYAAQAdAAsAAAATABUAAQAdAAsAAAAUABUAAQAdAAsAAAAVABUAAQAdAAsAAAAWABUAAQAdAAsAAAASABUAAQAdAAsAAAARABUAAQAdAAsAAAAQABUAAQAdAAsAAAAPABUAAQAdAAsAAAAPABQAAQAdAAsAAAAOABQAAQAdAAsAAAANABQAAQAdAAsAAAAMABQAAQAdAAsAAAALABQAAQAdAAsAAAAKABQAAQAdAAsAAAAKABUAAQAdAAsAAAAHABYAAQAdAAsAAAAGABYAAQAdAAsAAAAGABcAAQAdAAsAAAAHABcAAQAdAAsAAAAIABcAAQAdAAsAAAAJABcAAQAdAAsAAAAKABcAAQAdAAsAAAALABcAAQAdAAsAAAAMABcAAQAdAAsAAAANABcAAQAdAAsAAAAOABcAAQAdAAsAAAAPABcAAQAdAAsAAAAQABcAAQAdAAsAAAARABcAAQAdAAsAAAASABcAAQAdAAsAAAATABcAAQAdAAsAAAAUABYAAQAdAAsAAAAVABYAAQAdAAsAAAAWABYAAQAdAAsAAAAXABYAAQAdAAsAAAAYABYAAQAdAAsAAAAZABYAAQAdAAsAAAAaABYAAQAdAAsAAAAbABYAAQAdAAsAAAAbABcAAQAdAAsAAAAcABcAAQAdAAsAAAAcABYAAQAdAAsAAAAcABgAAQAdAAsAAAAbABgAAQAdAAsAAAAaABgAAQAdAAsAAAAZABgAAQAdAAsAAAAYABgAAQAdAAsAAAAXABgAAQAdAAsAAAAWABgAAQAdAAsAAAAVABgAAQAdAAsAAAAUABgAAQAdAAsAAAATABgAAQAdAAsAAAASABgAAQAdAAsAAAARABgAAQAdAAsAAAAQABgAAQAdAAsAAAAPABgAAQAdAAsAAAAOABgAAQAdAAsAAAANABgAAQAdAAsAAAAMABgAAQAdAAsAAAALABgAAQAdAAsAAAAKABgAAQAdAAsAAAAJABgAAQAdAAsAAAAIABgAAQAdAAsAAAAHABgAAQAdAAsAAAAGABkAAQAdAAsAAAAHABkAAQAdAAsAAAAIABoAAQAdAAsAAAAJABoAAQAdAAsAAAAKABoAAQAdAAsAAAALABoAAQAdAAsAAAAMABoAAQAdAAsAAAAMABkAAQAdAAsAAAANABkAAQAdAAsAAAAOABkAAQAdAAsAAAAPABkAAQAdAAsAAAAQABkAAQAdAAsAAAARABkAAQAdAAsAAAASABkAAQAdAAsAAAATABkAAQAdAAsAAAAUABkAAQAdAAsAAAAVABoAAQAdAAsAAAAWABoAAQAdAAsAAAAXABoAAQAdAAsAAAAYABoAAQAdAAsAAAAZABoAAQAdAAsAAAAaABoAAQAdAAsAAAAbABoAAQAdAAsAAAAcABoAAQAdAAsAAAAGABsAAQAdAAsAAAAHABsAAQAdAAsAAAAIABsAAQAdAAsAAAAJABsAAQAdAAsAAAAKABsAAQAdAAsAAAALABsAAQAdAAsAAAAMABsAAQAdAAsAAAANABsAAQAdAAsAAAAOABsAAQAdAAsAAAAPABsAAQAdAAsAAAAQABsAAQAdAAsAAAARABsAAQAdAAsAAAASABsAAQAdAAsAAAATABsAAQAdAAsAAAAUABsAAQAdAAsAAAAVABsAAQAdAAsAAAAWABsAAQAdAAsAAAAXABsAAQAdAAsAAAAYABsAAQAdAAsAAAAZABsAAQAdAAsAAAAaABsAAQAdAAsAAAAbABsAAQAdAAsAAAAcABsAAQAdAAsAAAAbABwAAQAdAAsAAAAaABwAAQAdAAsAAAA=")
tile_set = SubResource("TileSet_unhg1")
script = ExtResource("2_cl405")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = 28.0
offset_top = 1.0
offset_right = 524.0
offset_bottom = 725.0
color = Color(0, 0, 0, 0.243137)

[node name="Control" type="Control" parent="."]
z_index = 1
layout_mode = 3
anchors_preset = 0
offset_left = 74.0
offset_top = 185.0
offset_right = 485.0
offset_bottom = 341.0

[node name="GameOverContainer" type="VBoxContainer" parent="Control"]
visible = false
z_index = 1
layout_mode = 0
offset_left = 89.0
offset_right = 336.0
offset_bottom = 146.0
alignment = 1

[node name="MessageLabel" type="Label" parent="Control/GameOverContainer"]
texture_filter = 1
layout_mode = 2
theme_override_colors/font_color = Color(0.847992, 0, 0.187256, 1)
theme_override_colors/font_shadow_color = Color(5.77569e-06, 0.685424, 0.874059, 1)
theme_override_colors/font_outline_color = Color(0.47832, 0.211328, 0.554685, 1)
theme_override_fonts/font = ExtResource("2_nkuw6")
theme_override_font_sizes/font_size = 57
text = "Game Over
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreLabel" type="Label" parent="Control/GameOverContainer"]
texture_filter = 1
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.686275, 0.87451, 1)
theme_override_fonts/font = ExtResource("2_nkuw6")
theme_override_font_sizes/font_size = 35
text = "SCORE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Score" type="Label" parent="Control/GameOverContainer"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("3_unhg1")
text = "0
"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("6_1telg")

[node name="GameHighScore" type="VBoxContainer" parent="Control"]
visible = false
layout_mode = 0
offset_left = 37.0
offset_top = -13.0
offset_right = 386.0
offset_bottom = 140.0

[node name="MessageLabel" type="Label" parent="Control/GameHighScore"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.847992, 0, 0.187256, 1)
theme_override_colors/font_shadow_color = Color(5.77569e-06, 0.685424, 0.874059, 1)
theme_override_colors/font_outline_color = Color(0.47832, 0.211328, 0.554685, 1)
theme_override_fonts/font = ExtResource("2_nkuw6")
theme_override_font_sizes/font_size = 57
text = "NUEVO RECORD!
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Control/GameHighScore/MessageLabel"]
layout_mode = 2
offset_left = -7.0
offset_top = 56.0
offset_right = 342.0
offset_bottom = 84.0

[node name="ScoreLabel" type="Label" parent="Control/GameHighScore/MessageLabel/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_colors/font_color = Color(0.874326, 0.740351, 0.21948, 1)
theme_override_fonts/font = ExtResource("2_nkuw6")
theme_override_font_sizes/font_size = 35
text = "SCORE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Score" type="Label" parent="Control/GameHighScore/MessageLabel/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("3_unhg1")
text = "0
"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("6_1telg")

[node name="HBoxContainer" type="HBoxContainer" parent="Control/GameHighScore/MessageLabel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -172.5
offset_top = 54.0
offset_right = 176.5
offset_bottom = 85.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="Control/GameHighScore/MessageLabel/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_unhg1")
text = "PERFIL : "

[node name="LineEdit" type="LineEdit" parent="Control/GameHighScore/MessageLabel/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_unhg1")

[node name="TextureButton" type="TextureButton" parent="."]
texture_filter = 1
offset_left = 175.0
offset_top = 344.0
offset_right = 276.0
offset_bottom = 384.0
texture_normal = SubResource("AtlasTexture_bgp0o")
texture_pressed = SubResource("AtlasTexture_8c4tm")
script = ExtResource("6_csxi0")

[node name="RestartGameLabel" type="Label" parent="TextureButton"]
texture_filter = 1
layout_mode = 0
offset_left = 13.0
offset_top = 10.0
offset_right = 89.0
offset_bottom = 26.0
theme_override_fonts/font = ExtResource("3_unhg1")
text = "continuar"

[node name="TextureButton2" type="TextureButton" parent="."]
texture_filter = 1
offset_left = 288.0
offset_top = 343.0
offset_right = 389.0
offset_bottom = 383.0
texture_normal = SubResource("AtlasTexture_ay67i")
script = ExtResource("8_ay67i")

[node name="Label" type="Label" parent="TextureButton2"]
texture_filter = 1
layout_mode = 0
offset_left = 34.0
offset_top = 11.0
offset_right = 68.0
offset_bottom = 27.0
theme_override_fonts/font = ExtResource("3_unhg1")
text = "Salir"

[connection signal="pressed" from="TextureButton" to="." method="_on_texture_button_pressed"]
[connection signal="pressed" from="TextureButton" to="TextureButton" method="_on_pressed"]
[connection signal="pressed" from="TextureButton2" to="TextureButton2" method="_on_pressed"]
